# fastapi

./: DockerFile  alembic.ini  main v01.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0526057c4277_add_phone_number.py  29e1f490e39b_auto_vote.py  486d8549bc7b_add_foreign_key_to_posts_table.py  5a9602074af5_add_column_to_posts_table.py  71e790c9cd39_add_last_few_columns_to_posts_table.py  a93ef47a9dc5_add_user_table.py  ca8de8e76558_create_posts_table.py
api/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
api/routers/: auth.py  post.py  user.py  vote.py
